--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <tr>
         <td>2020</td>
         <td>University of Aberdeen</td>
-        <td>Teacher Qualification for Further Education<strong>Waste of Time</strong></td>
+        <td>Teacher Qualification for Further Education<strong>TQFE</strong></td>
     </tr>
     <tr>
         <td>2019</td>
