--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+trical <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,9 +16,9 @@
     <td>
         <h1 align = "left">Gordon Brown</h1>
     <br>
-    <p align = "left"> <em> Lecturer in <strong> <a href="https://en.wikipedia.org/wiki/Marine_engineering"> Marine Engineering</a> </strong>.</em> </p>
-    <p align = "left"> <em> Chairman of the <strong>Squire Street Owners Association</strong></em> </p>
-    <p>Lecturer in Marine Engineering at the City of Glasgow College. My subject area focuses on basic Electrical Engineering for maritime applications. I love tea and coffee.
+    <p align = "left"> <em> Lecturer in <strong> <a href="https://en.wikipedia.org/wiki/Marine_engineering"> Electrical Engineering</a> </strong>.</em> </p>
+    <p align = "left"> <em> Author of several books</em> </p>
+    <p>Lecturer in Marine Engineering at the Forth Valley College. My subject area focuses on basic Electrical Engineering. I love tea and coffee.
         As you can probably tell I am learning some basic web development.
     </p>
     </td>
@@ -36,9 +36,14 @@
 </thead>
 <tbody>
     <tr>
+        <td>2024</td>
+        <td>Forth Valley College</td>
+        <td>HNC <strong>Electrical Engineering Current</strong></td>
+    </tr>
+    <tr>
         <td>2022</td>
         <td>City of Glasgow College</td>
-        <td>HNC <strong>Electrical Engineering Current</strong></td>
+        <td>HNC <strong>Maritime Electrical Engineering Former</strong></td>
     </tr>
     <tr>
         <td>2020</td>
@@ -147,3 +152,4 @@
 
 </body>
 </html>
+
